# libtooling-template

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  clean.sh
src/: CMakeLists.txt  main.cc
src/consumer/: consumer.cc
src/transformer/: functioncalltransformer.cc  functioncalltransformer.h  transformer.h
